--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chrome Dino Game</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="./script.js" type="module"></script>
   </head>
   <body>
-    <div class="world">
+    <div class="world" data-world>
       <div class="score">0</div>
       <div class="start-screen hide">PRESS ANY KEY TO START</div>
       <img src="./img/ground.png" alt="ground" class="ground" />
