--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <div class="world" data-world>
-      <div class="score">0</div>
-      <div class="start-screen hide">PRESS ANY KEY TO START</div>
-      <img src="./img/ground.png" alt="ground" class="ground" />
-      <img src="./img/ground.png" alt="ground" class="ground" />
+      <div class="score">HISCORE: <span data-score>0</span></div>
+      <div class="start-screen" data-start-screen>PRESS ANY KEY TO START</div>
+      <img src="./img/ground.png" alt="ground" class="ground" data-ground />
+      <img src="./img/ground.png" alt="ground" class="ground" data-ground />
       <img src="./img/dino-stationary.png" alt="dino" class="dino" />
     </div>
   </body>
