--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="start-screen" data-start-screen>PRESS ANY KEY TO START</div>
       <img src="./img/ground.png" alt="ground" class="ground" data-ground />
       <img src="./img/ground.png" alt="ground" class="ground" data-ground />
-      <img src="./img/dino-stationary.png" alt="dino" class="dino" />
+      <img src="./img/dino-stationary.png" alt="dino" class="dino" data-dino />
     </div>
   </body>
 </html>
