--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chrome Dino Game</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="./script.js" type="module"></script>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="script.js" type="module"></script>
   </head>
   <body>
     <div class="world" data-world>
       <div class="score">HISCORE: <span data-score>0</span></div>
-      <div class="start-screen" data-start-screen>PRESS ANY KEY TO START</div>
-      <img src="./img/ground.png" alt="ground" class="ground" data-ground />
-      <img src="./img/ground.png" alt="ground" class="ground" data-ground />
-      <img src="./img/dino-stationary.png" alt="dino" class="dino" data-dino />
+      <div class="start-screen" data-start-screen>Press Any Key To Start</div>
+      <img src="imgs/ground.png" class="ground" data-ground />
+      <img src="imgs/ground.png" class="ground" data-ground />
+      <img src="imgs/dino-stationary.png" class="dino" data-dino />
     </div>
   </body>
 </html>
